tests/db/snapshots/r#mod__db__sqlite__can_get_status_stats.snap
---
source: tests/db/sqlite.rs
expression: connector.status_stats().await
---
Ok(
    StatusSats {
        completed: 3,
        processing: 3,
        cancelled: 1,
        queued: 5,
        failed: 2,
    },
)
