tests/db/snapshots/r#mod__db__sqlite__search[None]-status[None].snap
---
source: tests/db/sqlite.rs
expression: "connector.get_jobs(search, status).await"
---
Ok(
    [
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA99",
            name: "UserAccountActivation",
            task_data: Object {
                "activation_token": String("abcdef123456"),
                "email": String("user11@example.com"),
                "user_id": Number(133),
            },
            status: "queued",
            run_at: 2024-11-28T08:19:08Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA98",
            name: "PasswordChangeNotification",
            task_data: Object {
                "change_time": String("2024-11-27T12:30:00Z"),
                "email": String("user12@example.com"),
                "user_id": Number(134),
            },
            status: "completed",
            run_at: 2024-11-28T08:04:25Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA97",
            name: "SendInvoice",
            task_data: Object {
                "email": String("user13@example.com"),
                "invoice_id": String("INV-2024-01"),
                "user_id": Number(135),
            },
            status: "processing",
            run_at: 2024-11-28T08:04:25Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA96",
            name: "UserDeactivation",
            task_data: Object {
                "deactivation_reason": String("user requested"),
                "email": String("user14@example.com"),
                "user_id": Number(136),
            },
            status: "failed",
            run_at: 2024-11-28T08:04:25Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA95",
            name: "SubscriptionReminder",
            task_data: Object {
                "email": String("user15@example.com"),
                "renewal_date": String("2024-12-01"),
                "user_id": Number(137),
            },
            status: "queued",
            run_at: 2024-11-28T08:04:25Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA94",
            name: "DataBackup",
            task_data: Object {
                "backup_id": String("backup-12345"),
                "email": String("user16@example.com"),
                "user_id": Number(138),
            },
            status: "cancelled",
            run_at: 2024-11-28T08:04:25Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA93",
            name: "SecurityAlert",
            task_data: Object {
                "alert_type": String("login attempt from new device"),
                "email": String("user17@example.com"),
                "user_id": Number(139),
            },
            status: "queued",
            run_at: 2024-11-28T08:04:25Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA92",
            name: "WeeklyReportEmail",
            task_data: Object {
                "email": String("user18@example.com"),
                "report_period": String("2024-11-20 to 2024-11-27"),
                "user_id": Number(140),
            },
            status: "processing",
            run_at: 2024-11-28T08:04:25Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA91",
            name: "AccountDeletion",
            task_data: Object {
                "deletion_request_time": String("2024-11-27T14:00:00Z"),
                "email": String("user20@example.com"),
                "user_id": Number(142),
            },
            status: "queued",
            run_at: 2024-11-28T08:04:25Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA90",
            name: "UserAccountActivation",
            task_data: Object {
                "activation_token": String("xyz987654"),
                "email": String("user21@example.com"),
                "user_id": Number(143),
            },
            status: "completed",
            run_at: 2024-11-28T08:04:25Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA89",
            name: "PasswordChangeNotification",
            task_data: Object {
                "change_time": String("2024-11-27T15:00:00Z"),
                "email": String("user22@example.com"),
                "user_id": Number(144),
            },
            status: "completed",
            run_at: 2024-11-28T08:04:25Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA88",
            name: "SendInvoice",
            task_data: Object {
                "email": String("user23@example.com"),
                "invoice_id": String("INV-2024-02"),
                "user_id": Number(145),
            },
            status: "processing",
            run_at: 2024-11-28T08:04:25Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA87",
            name: "UserDeactivation",
            task_data: Object {
                "deactivation_reason": String("account inactive"),
                "email": String("user24@example.com"),
                "user_id": Number(146),
            },
            status: "failed",
            run_at: 2024-11-28T08:04:25Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
        Job {
            id: "01JDM0X8EVAM823JZBGKYNBA86",
            name: "SubscriptionReminder",
            task_data: Object {
                "email": String("user25@example.com"),
                "renewal_date": String("2024-12-05"),
                "user_id": Number(147),
            },
            status: "queued",
            run_at: 2024-11-28T08:04:25Z,
            interval: None,
            created_at: 2024-11-28T08:03:25Z,
            updated_at: 2024-11-28T08:03:25Z,
        },
    ],
)
